@@ -1,8 +1,0 @@
-Changes
-lib/Web/Library/UnderscoreJS.pm
-Makefile.PL
-MANIFEST			This list of files
-MANIFEST.SKIP
-README.md
-share/1.4.4/js/underscore-min.js
-t/basic.t
