@@ -1,5 +1,9 @@
 Revision history for Perl extension Web-Library-UnderscoreJS
 
+{{$NEXT}}
+    [Improvements]
+        - Converted to Dist::Milla
+
 0.02 Fri May 17 13:01:22 2013 CEST
     [Improvements]
         - t/basic.t uses Web::Library::Test
